# whisper_windows_client

./: CMakeLists.txt  main.cpp
